@ElementCollection: java.util.Map<K,V> @MapKeyColumn