@@ -2,12 +2,15 @@ package com.code.truck.ecommerce.basic_mapping;
 
 import com.code.truck.ecommerce.EntityManagerBaseTests;
 import com.code.truck.ecommerce.model.Attributes;
+import com.code.truck.ecommerce.model.Client;
 import com.code.truck.ecommerce.model.Product;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 public class ElementCollectionTests extends EntityManagerBaseTests {
 
@@ -18,7 +21,7 @@ public class ElementCollectionTests extends EntityManagerBaseTests {
 
         Product product = entityManager.find(Product.class, 1);
 
-        product.setTags(Arrays.asList("ebook", "digital-book"));
+        product.setTags(List.of("ebook", "digital-book"));
 
         entityManager.getTransaction().commit();
         entityManager.clear();
@@ -35,7 +38,7 @@ public class ElementCollectionTests extends EntityManagerBaseTests {
 
         Product product = entityManager.find(Product.class, 1);
 
-        product.setAttributes(Arrays.asList(new Attributes("Display", "AMOLED"), new Attributes("Screen Size","2560X1440"), new Attributes("Color", "White")));
+        product.setAttributes(List.of(new Attributes("Display", "AMOLED"), new Attributes("Screen Size","2560X1440"), new Attributes("Color", "White")));
 
         entityManager.getTransaction().commit();
         entityManager.clear();
@@ -43,6 +46,29 @@ public class ElementCollectionTests extends EntityManagerBaseTests {
         Product productToAssert = entityManager.find(Product.class, product.getId());
 
         Assertions.assertFalse(productToAssert.getAttributes().isEmpty());
+
+    }
+
+    @Test
+    public void addContactTypeToClient() {
+
+        entityManager.getTransaction().begin();
+
+        Client client = entityManager.find(Client.class, 1);
+
+        Map<String,String> contacts = new HashMap<>();
+        contacts.put("email", "contato@email.com");
+        contacts.put("home phone", "(581)123-4567");
+        contacts.put("téléphone", "(123)456-7890");
+
+        client.setContactTypes(contacts);
+
+        entityManager.getTransaction().commit();
+        entityManager.clear();
+
+        Client clientToAssert = entityManager.find(Client.class, client.getId());
+
+        Assertions.assertEquals("(123)456-7890", clientToAssert.getContactTypes().get("téléphone"));
 
     }
 }
